Weather App UI completed

--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
                 <img src="./images/search.png"/>
             </div>
         </div>
+
+        <div class="weather">
+            <img src="./images/clouds.png" class="weather-icon"/>
+            <h1>28°C</h1>
+            <h2>Berlin</h2>
+        </div>
+        
+        <div class="details">
+            <div class="col">
+                <img src="./images/humidity.png" alt="humidity">
+                <div >
+                    <p class="humidity">50%</p>
+                    <p>Humidity</p>
+                </div>
+            </div>
+            <div class="col">
+                <img src="./images/wind.png" alt="wind">
+                <div >
+                    <p class="wind">3.39 km/h</p>
+                    <p>Wind Speed</p>
+                </div>
+            </div>
+        </div>
     </div>
     
 </body>
