--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="weather">
             <img src="./images/clouds.png" class="weather-icon"/>
             <h1 class="degree">28°C</h1>
-            <h2 class="city">Berlin</h2>
+            <h2 class="city">Kathmandu</h2>
 
 
             <div class="details">
